基因座修改

--- a/application/mobile/view/user/import_online.html
+++ b/application/mobile/view/user/import_online.html
@@ -78,102 +78,102 @@
                  <div class="l3h51" style="margin-top: -.1rem;">
 					<div class="l3h5d1">
 						<ul class="xiala">
-							<li>DYF387Sa</li>
-							<li>DYF387Sb</li>
-							<li>DYS19</li>
+							<li><span style="color:red;">*</span>DYS19</li>
+							<li><span style="color:red;">*</span>DYS385a</li>
+							<li><span style="color:red;">*</span>DYS385b</li>
 						</ul>
 						<ul class="xiala">
-							<li><input type="text" name="gene[DYF387Sa]" value='{:session("gene[DYF387Sa]","","mobile")}'li>
-							<li><input type="text" name="gene[DYF387Sb]" value='{:session("gene[DYF387Sb]","","mobile")}' /></li>
-							<li><input type="text" name="gene[DYS19]" value='{:session("gene[DYS19]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
-							<li>DYS385a</li>
-							<li>DYS385b</li>
-							<li>DYS389a</li>
-						</ul>
-						<ul class="xiala">
+							<li><input type="text" name="gene[DYS19]" value='{:session("gene[DYS19]","","mobile")}'li>
 							<li><input type="text" name="gene[DYS385a]" value='{:session("gene[DYS385a]","","mobile")}' /></li>
 							<li><input type="text" name="gene[DYS385b]" value='{:session("gene[DYS385b]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
+							<li><span style="color:red;">*</span>DYS389a</li>
+							<li><span style="color:red;">*</span>DYS389b</li>
+							<li><span style="color:red;">*</span>DYS390</li>
+						</ul>
+						<ul class="xiala">
 							<li><input type="text" name="gene[DYS389a]" value='{:session("gene[DYS389a]","","mobile")}' /></li>
+							<li><input type="text" name="gene[DYS389b]" value='{:session("gene[DYS389b]","","mobile")}' /></li>
+							<li><input type="text" name="gene[DYS390]" value='{:session("gene[DYS390]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
-                            <li>DYS389b</li>
-                            <li>DYS390</li>
-                            <li>DYS391</li>
+                            <li><span style="color:red;">*</span>DYS391</li>
+                            <li><span style="color:red;">*</span>DYS392</li>
+                            <li><span style="color:red;">*</span>DYS393</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[DYS389b]" value='{:session("gene[DYS389b]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[DYS390]" value='{:session("gene[DYS390]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS391]" value='{:session("gene[DYS391]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
-                            <li>DYS392</li>
-                            <li>DYS393</li>
-                            <li>DYS437</li>
-                        </ul>
-                        <ul class="xiala">
                             <li><input type="text" name="gene[DYS392]" value='{:session("gene[DYS392]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS393]" value='{:session("gene[DYS393]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
+                            <li><span style="color:red;">*</span>DYS437</li>
+                            <li><span style="color:red;">*</span>DYS438</li>
+                            <li><span style="color:red;">*</span>DYS439</li>
+                        </ul>
+                        <ul class="xiala">
                             <li><input type="text" name="gene[DYS437]" value='{:session("gene[DYS437]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
-                            <li>DYS438</li>
-                            <li>DYS439</li>
-                            <li>DYS448</li>
-                        </ul>
-                        <ul class="xiala">
                             <li><input type="text" name="gene[DYS438]" value='{:session("gene[DYS438]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS439]" value='{:session("gene[DYS439]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
+                            <li><span style="color:red;">*</span>DYS448</li>
+                            <li><span style="color:red;">*</span>DYS456</li>
+                            <li><span style="color:red;">*</span>DYS458</li>
+                        </ul>
+                        <ul class="xiala">
                             <li><input type="text" name="gene[DYS448]" value='{:session("gene[DYS448]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
-                            <li>DYS449</li>
-                            <li>DYS456</li>
-                            <li>DYS458</li>
-                        </ul>
-                        <ul class="xiala">
-                            <li><input type="text" name="gene[DYS449]" value='{:session("gene[DYS449]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS456]" value='{:session("gene[DYS456]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS458]" value='{:session("gene[DYS458]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
+                            <li><span style="color:red;">*</span>DYS635</li>
+                            <li><span style="color:red;">*</span>GATA_H4</li>
+                            <li>DYF387Sa</li>
+                        </ul>
+                        <ul class="xiala">
+                            <li><input type="text" name="gene[DYS635]" value='{:session("gene[DYS635]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[GATA_H4]" value='{:session("gene[GATA_H4]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYF387Sa]" value='{:session("gene[DYF387Sa]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
+                            <li>DYF387Sb</li>
+                            <li>DYS449</li>
                             <li>DYS460</li>
-                            <li>DYS481</li>
+                        </ul>
+                        <ul class="xiala">
+                            <li><input type="text" name="gene[DYF387Sb]" value='{:session("gene[DYF387Sb]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS449]" value='{:session("gene[DYS449]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS460]" value='{:session("gene[DYS460]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
+                            <li>DYS481a</li>
+                            <li>DYS481b</li>
                             <li>DYS518</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[DYS460]" value='{:session("gene[DYS460]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[DYS481]" value='{:session("gene[DYS481]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS481a]" value='{:session("gene[DYS481a]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS481b]" value='{:session("gene[DYS481b]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS518]" value='{:session("gene[DYS518]","","mobile")}' /></li>
                         </ul>
                         <ul class="xiala">
-                            <li>DYS527a</li>
-                            <li>DYS527b</li>
+                            <li>DYS527</li>
                             <li>DYS533</li>
-                        </ul>
-                        <ul class="xiala">
-                            <li><input type="text" name="gene[DYS527a]" value='{:session("gene[DYS527a]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[DYS527b]" value='{:session("gene[DYS527b]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[DYS533]" value='{:session("gene[DYS533]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
                             <li>DYS570</li>
+                        </ul>
+                        <ul class="xiala">
+                            <li><input type="text" name="gene[DYS527]" value='{:session("gene[DYS527]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS533]" value='{:session("gene[DYS533]","","mobile")}' /></li>
+                            <li><input type="text" name="gene[DYS570]" value='{:session("gene[DYS570]","","mobile")}' /></li>
+                        </ul>
+                        <ul class="xiala">
                             <li>DYS576</li>
                             <li>DYS627</li>
                         </ul>
                         <ul class="xiala">
-                            <li><input type="text" name="gene[DYS570]" value='{:session("gene[DYS570]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS576]" value='{:session("gene[DYS576]","","mobile")}' /></li>
                             <li><input type="text" name="gene[DYS627]" value='{:session("gene[DYS627]","","mobile")}' /></li>
-                        </ul>
-                        <ul class="xiala">
-                            <li>DYS635</li>
-                            <li>GATA_H4</li>
-                        </ul>
-                        <ul class="xiala">
-                            <li><input type="text" name="gene[DYS635]" value='{:session("gene[DYS635a]","","mobile")}' /></li>
-                            <li><input type="text" name="gene[GATA_H4]" value='{:session("gene[GATA_H4]","","mobile")}' /></li>
                         </ul>
                         
 					</div>
