--- a/application/admin/view/system/setting.html
+++ b/application/admin/view/system/setting.html
@@ -120,7 +120,7 @@
 						<input type="text" id="website-Keywords" name="key_words" placeholder="5个左右,8汉字以内,用英文,隔开" value="{$config.key_words ?? ''}" class="input-text">
 					</div>
 				</div>
-				<div class="row cl">
+				<!-- <div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">
 						<span class="c-red">*</span>
 						网站描述：</label>
@@ -146,7 +146,7 @@
 				</div>
 				<div class="row cl">
 					<label class="form-label col-xs-4 col-sm-2">
-						<!-- <span class="c-red">*</span> -->
+						//<span class="c-red">*</span>
 						联系手机：</label>
 					<div class="formControls col-xs-8 col-sm-9">
 						<input type="text" id="website-mobile" name="mobile" value="{$config.mobile ?? ''}" class="input-text">
@@ -186,7 +186,7 @@
 					<div class="formControls col-xs-8 col-sm-9">
 						<input type="text" id="website-service-tel" name="service_tel" value="{$config.service_tel ?? ''}" class="input-text">
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="row cl">
