--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -1,12 +1,15 @@
 <style>
-.footer img{width:100px;height:100px; margin-right: 0;}
-
+	.footer img {
+		width: 100px;
+		height: 100px;
+		margin-right: 0;
+	}
 </style>
 <div class="inner-wrap">
-    <div class="left fl">
-        <div class="bottomNav">
-            <ul>
-                    <!--<li><a href="#" style="color: #4bb4fa;">首页</a></li>
+	<div class="left fl">
+		<div class="bottomNav">
+			<ul>
+				<!--<li><a href="#" style="color: #4bb4fa;">首页</a></li>
                     <li><a href="#" style="color: #4bb4fa;">关于族内</a></li>
                     <li><a href="#" style="color: #4bb4fa;">关注/联系</a></li>
                     <li><a href="#">寻根故事</a></li>
@@ -21,40 +24,42 @@
 					<li><a href="#">顾问委员会</a></li>
 					 <li><a href="#">个人中心</a></li>
                     <li><a target="_blank" href="{:url('article/details','',false)}?id=32">隐私保护</a></li>-->
-                   <li>
-                   	<a href="#" style="color: #4bb4fa;">首页</a>
-                   	<a href="/index/index/index">DNA寻祖</a>
-                   	<a href="/index/referral/referral">寻根故事</a>
-                   	<a href="{:url('article/details','',false)}?id=34">帮助中心</a>
-                   	<a href="/index/buy/buy">族内商城</a>
-                   	<a href="{:url('user/index')}">个人中心</a>
-                   
-                   </li>
-                   <li>
-                   	<a href="#" style="color: #4bb4fa;">族内</a>
-                   	<a href="/index/about/index">关于我们</a>
-                   	<a href="#">加入我们</a>
-                   	<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
-                   	<a target="_blank" href="{:url('article/details','',false)}?id=35">顾问委员会</a>
-                   	<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私声明</a>
-                   </li>
-                   <li>
-                   	<a href="#" style="color: #4bb4fa;">联系</a>
-                   	<a href="#">联系电话:020-3909 2980</a>
-                   	<a href="#">联系邮箱:myroots@126.com</a>
-                   </li> 
-            </ul>
-        </div>
-        <div class="copyright">
-            <span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备19055655号<img src="__STATIC__/images/home/jing.png"/></span>
-            <p>大美基因科技(广东)有限公司</p>
-            
-            <!-- <p class="hao">{$web_setting.icp}</p> -->
-            
-        </div>
-    </div>
-    <div class="code fl">
-        <img width="100px" height="100px " src="{$web_setting.weixin_qrcode}"  class="zhifeng_qrcode"/>
-        <p>扫码关注我们</p>
-    </div>
+				<li style="width: 12%;vertical-align: top;margin-top:0px">
+					<a href="#">首页</a>
+					<a href="/index/index/index">DNA寻祖</a>
+					<a href="/index/referral/referral">寻根故事</a>
+					<a href="{:url('article/details','',false)}?id=34">帮助中心</a>
+					<a href="/index/buy/buy">族内商城</a>
+					<a href="{:url('user/index')}">个人中心</a>
+
+				</li>
+				<li style="position: relative;text-align: center;">
+					<div class="code fl">
+						<img width="100px" height="100px " src="{$web_setting.weixin_qrcode}" class="zhifeng_qrcode" />
+						<p>扫码关注我们</p>
+					</div>
+					<a href="#" style="margin-top: 130px;">联系</a>
+					<a href="#" >联系电话:020-3909 2980</a>
+					<a href="#" >联系邮箱:myroots@126.com</a>
+				</li>
+				<li style="float: right;width: 12%;vertical-align: top;margin-top: 0px;">
+					<a href="#">族内</a>
+					<a href="/index/about/index">关于我们</a>
+					<a href="#">加入我们</a>
+					<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
+					<a target="_blank" href="{:url('article/details','',false)}?id=35">顾问委员会</a>
+					<a target="_blank" href="{:url('article/details','',false)}?id=32">隐私声明</a>
+				</li>
+
+			</ul>
+		</div>
+		<div class="copyright">
+			<span>@2019族内myroots.All Rights Reserved &nbsp;&nbsp;粤ICP备19055655号<img src="__STATIC__/images/home/jing.png"/></span>
+			<p>大美基因科技(广东)有限公司</p>
+
+			<!-- <p class="hao">{$web_setting.icp}</p> -->
+
+		</div>
+	</div>
+
 </div>
