--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -58,7 +58,9 @@
                     </div>
                 </div>
             </div>
-
+         <div style="width: 100%;margin-bottom: 600px;">
+          <img src="__STATIC__/images/home/piccc.png"  style="width: 50%;height: 500px;position: absolute;left: 0;right: 0;margin: 0 auto;"/>
+          </div> 
         <!-- 测验步骤 -->
         <div class="test-steps">
             <div class="inner-wrap">
