--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -57,7 +57,7 @@
 				<div class="product_info">
 					<div class="product_item">
                         <p class="price">
-                            ￥{$info.price}
+                            	会员积分{$info.price}
                         </p>
                          
                          
@@ -125,7 +125,7 @@
 				</a>
 				{/if}
 				<a class="store_buy" onclick="javascript:location.href='/mobile/goods/check_order?goods_id={$info.id}'">
-                      立即购买
+                      兑换积分
 				</a>
 
 			</div>
