--- a/application/mobile/view/goods/goods_list.html
+++ b/application/mobile/view/goods/goods_list.html
@@ -40,8 +40,8 @@
                         </span>
                     </div>
                     <div class="buy_box">
-                        <span class="price left">￥{$vo.price}</span>
-                        <span class="buy_promptly right"  onclick="pageJump('{:url('goods/goodInfo',array('id'=>$vo.id))}')">立即购买</span>
+                        <span class="price left">会员积分{$vo.price}</span>
+                        <span class="buy_promptly right"  onclick="pageJump('{:url('goods/goodInfo',array('id'=>$vo.id))}')">积分兑换</span>
                     </div>
                 </div>
             </div>
