--- a/application/mobile/view/user/my_order.html
+++ b/application/mobile/view/user/my_order.html
@@ -40,7 +40,7 @@
 						<div class="commodity_term">
 							<p class="commodity_term_top">
 								<span class="commodity_term_top_left">订单编号:&nbsp;{$vo.order_sn}</span>
-								<span class="commodity_term_top_right">{$sname[$vo.order_status]}</span>
+								<span class="commodity_term_top_right">已完成</span>
 							</p>
 							<div class="commodity_term_bottom">
 								<p class="commodity_term_bottom_left" onclick="javascript:location.href='/mobile/goods/order_info?id={$vo.id}'">
@@ -62,7 +62,7 @@
 										<p class="commodity_term_but button_red" onclick="confirm_order('{$vo.id}')">确认收货</p>
 										{/if}
 										{if condition="$vo.order_status eq 3"}
-										<p class="commodity_term_but button_red" onclick="error_msg('敬请期待！');">评价</p>
+										<p class="commodity_term_but button_red" >已完成</p>
 										{/if}
 										<!-- <p class="commodity_term_but button_ash">取消订单</p> -->
 									</div>
