--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -43,8 +43,8 @@
                 <div class="inner-wrap">
                     <div class="gene-item">
                         <div class="text">
-                            <h1>已有基因数据？</h1>
-                            <p>Y - STR数据<br />检测对比报告</p>
+                            <h1>已有基因数据</h1>
+                            <!--<p>Y - STR数据<br />检测对比报告</p>-->
                         </div>
                         <!-- <a href="/index/index/import_data" class="btn" >导入数据</a> -->
                         <a  class="btn" href="/index/index/import_data">导入数据</a>
@@ -57,15 +57,23 @@
                         <a href="/index/buy/buy" class="btn">立即购买</a>
                     </div>
                 </div>
-            </div>
-         <div style="width: 100%;margin-bottom: 600px;">
-          <img src="__STATIC__/images/home/piccc.png"  style="width: 50%;height: 500px;position: absolute;left: 0;right: 0;margin: 0 auto;"/>
+        </div>
+        <div style="width: 100%;background: white;">   
+         <div style="margin-bottom: 600px;width: 1200px;margin: 0 auto;">
+          <img src="__STATIC__/images/home/piccc.png"  style="width: 80%;height: 500px;"/>
           </div> 
+        </div> 
+        <!--<div style="width: 100%;background: white;">
+         <div style="width: 1200px;margin: 0 auto;">
+        	<div style="display: inline-block;width: 20%;vertical-align: top;padding-top: 23px;font-weight: bold;padding-right: 11px;">唾液中的口腔上皮细胞含有DNA我们为你邮寄唾液采样盒,自行在家采集2mL唾液,并原包装寄回 我们检测中心即可</div>
+        	<img src="__STATIC__/images/home/jiansu.png" />
+        </div>
+        </div>-->
         <!-- 测验步骤 -->
         <div class="test-steps">
             <div class="inner-wrap">
-                <h1>如何测验，只需要唾液即可</h1>
-                <p>唾液中的口腔上皮细胞含有 DNA <br/> 我们为你邮寄唾液采样盒，自行在家采集2mL 唾液，并原包装寄回 我们检测中心即可</p>
+                <!--<h1>如何测验，只需要唾液即可</h1>
+                <p>唾液中的口腔上皮细胞含有 DNA <br/> 我们为你邮寄唾液采样盒，自行在家采集2mL 唾液，并原包装寄回 我们检测中心即可</p>-->
                 <div class="steps-wrap">
                     <div class="steps-item">
                         <div class="img-wrap">
@@ -97,11 +105,11 @@
                 </div>
             </div>
         </div>
-
+         <div style="width: 100%;background: #747474;"><div style="width: 1200px;margin: 0 auto;color: white;font-size: 10px;"> <h1>DNA可以解答哪些你对遗传的疑问？</h1></div></div> 
          <!-- 解答问题 -->
          <div class="answer-questions">
                 <div class="inner-wrap">
-                    <h1>DNA可以解答哪些你对遗传的疑问？</h1>
+            
                     
                     <p>经严格筛选验证检测项目包含祖源、遗传特质、遗传风险等，每月持续上新。随着研究的不断深入,你能获得的解答远远更多。</p>
                     <ul class="answer-list">
