--- a/public/static/index/css/home/index.css
+++ b/public/static/index/css/home/index.css
@@ -38,10 +38,10 @@
 /* 解答问题 */
 .answer-questions{
     width: 100%;
-    height: 408px;
-    padding: 60px 0;
+    height: 258px;
     box-sizing: border-box;
     background-color: #f5f5f5;
+    border-bottom: 10px solid white;
 }
 .answer-questions h1{
     width: 810px;
@@ -91,7 +91,8 @@
 /* 测验步骤 */
 .test-steps{
     width: 100%;
-    height: 900px;
+    height: 600px;
+    padding-top:80px;
     background-color: #fff;
 }
 .test-steps .inner-wrap h1{
@@ -124,7 +125,6 @@
     height: 448px;
     text-align: center;
     border-radius: 8px;
-    background-color: #52c2fa;
     padding: 25px;
     box-sizing: border-box;
     position: relative;
@@ -134,7 +134,7 @@
     width: 29px;
     height: 37px;
     display: block;
-    background: url(../../images/home/you.png) no-repeat;
+    /*background: url(../../images/home/you.png) no-repeat;*/
     background-size: 100%;
     position: absolute;
     top: 50%;
@@ -165,55 +165,52 @@
     color: #3e3b3a;
 }
 .steps-wrap .steps-item:nth-child(2){
-    background-color: #ff9c98;
+    /*background-color: #ff9c98;*/
 }
 .steps-wrap .steps-item:nth-child(3){
-    background-color: #77d7ff;
+    /*background-color: #77d7ff;*/
 }
 
 /* 导入数据&购买 */
 .about-gene{
     width: 100%;
-    height: 554px;
-    padding: 108px 0;
     box-sizing: border-box;
-    background-color: #f5f5f5;
+    background: white;
 }
 .about-gene .inner-wrap{
-    height: 346px;
+    height: 286px;
     border-radius: 8px;
-    background: -moz-linear-gradient(top, #afabed 0%, #d0c2ed 100%);
+    /*background: -moz-linear-gradient(top, #afabed 0%, #d0c2ed 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #afabed), color-stop(100%, #d0c2ed));
 	background: -webkit-linear-gradient(top, #afabed 0%, #d0c2ed 100%);
 	background: -o-linear-gradient(top, #afabed 0%, #d0c2ed 100%);
-	background: -ms-linear-gradient(top, #afabed 0%, #d0c2ed 100%);   
+	background: -ms-linear-gradient(top, #afabed 0%, #d0c2ed 100%);   */
 }
 
 .about-gene .gene-item{
-    width: 50%;
+    width: 30%;
     text-align: center;
-    color: #fff;
     float: left;
 }
 .about-gene .gene-item .text{
-    height: 150px;
+    /*height: 150px;*/
     margin-bottom: 10px;
 }
 .about-gene .gene-item h1{
-    font-size: 54px;
+    font-size: 30px;
     margin: 50px 0 30px;
 }
 .about-gene .gene-item p{
     font-size: 16px;
 }
 .about-gene .gene-item .btn{
-    width: 355px;
+    width: 300px;
     height: 84px;
     line-height: 84px;
-    color: #fff;
+    color:black;
     font-size: 26px;
     text-align: center;
-    background-color: #37afe6;
+    background-color: #D59961;
     border-radius: 8px;
     display: block;
     margin: 0 auto;
