--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -52,7 +52,7 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
                	
 				</li>
-				<li onClick="window.location.href='/mobile/user/my_walet'">
+				<li onClick="window.location.href='/mobile/goods/jifen_goodsList'">
 
 				  
 					<img class="img1" src="__STATIC__/img/my/liwu.png" />
