--- a/application/mobile/view/goods/jifen_goods_list.html
+++ b/application/mobile/view/goods/jifen_goods_list.html
@@ -35,13 +35,11 @@
                 <div class="item-msg">
                     <p class="item_title">{$vo.name}</p>
                     <div class="item_info">
-                        <span>
-                            {$vo.desc}
-                        </span>
+                        <span>{$vo.desc}</span>
                     </div>
                     <div class="buy_box">
-                        <span class="price left">¥{$vo.price}</span>
-                        <span class="buy_promptly right"  onclick="pageJump('{:url('goods/goodInfo',array('id'=>$vo.id))}')">立即购买</span>
+                        <span class="price left">积分{$vo.price}</span>
+                        <span class="buy_promptly right"  onclick="pageJump('{:url('goods/jifen_goodInfo',array('id'=>$vo.id))}')">立即兑换</span>
                     </div>
                 </div>
             </div>
