--- a/application/mobile/view/user/my_order.html
+++ b/application/mobile/view/user/my_order.html
@@ -40,7 +40,7 @@
 						<div class="commodity_term">
 							<p class="commodity_term_top">
 								<span class="commodity_term_top_left">订单编号:&nbsp;{$vo.order_sn}</span>
-								<span class="commodity_term_top_right">已完成</span>
+								<span class="commodity_term_top_right">{$sname[$vo.status]}</span>
 							</p>
 							<div class="commodity_term_bottom">
 								<p class="commodity_term_bottom_left" onclick="javascript:location.href='/mobile/goods/order_info?id={$vo.id}'">
