--- a/public/static/index/css/public/public.css
+++ b/public/static/index/css/public/public.css
@@ -132,6 +132,14 @@ body{
 }
 .footer .left{
 	height: 210px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,0);
+    -ms-transform: translate(-50%,0);
+    -webkit-transform: translate(-50%,0);
+    -moz-transform: translate(-50%,0);
+    -o-transform: translate(-50%,0);
+    
 }
 .footer .bottomNav{
 	margin-top:20px;
