--- a/application/admin/view/distribution/shareposter.html
+++ b/application/admin/view/distribution/shareposter.html
@@ -40,7 +40,7 @@
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
     <p style="color:red;margin-left:10%;">下面设置栏“宽”“高”“X”“Y”“字体大小”等请填写整数</p>
-	<form class="form form-horizontal" method="POST" target="ajaxR">
+	<form class="form form-horizontal" method="POST" enctype="multipart/form-data" target="ajaxR">
 		<div id="tab-system" class="HuiTab">
 			<div>
                 <div class="row cl">
