--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -8,10 +8,10 @@
                 <li><a href="/index/gene/index">我的基因</a></li>
                 <!-- <li><a href="/index/index/my_information">我的基因</a></li>  -->
                 <li><a href="/index/buy/buy">族内商城</a></li>
-                <li><a href="/index/referral/referral">寻根故事</a></li>
+                <li><a href="{:url('article/details','',false)}?id=36">寻根故事</a></li>
                 <!-- <li><a href="/index/buy/my_order">我的订单</a></li> -->
                 <li><a href="{:url('article/details','',false)}?id=34">帮助中心</a></li>
-                <li><a href="/index/about/index">关于我们</a></li>
+                <li><a href="{:url('article/details','',false)}?id=37">关于我们</a></li>
         </ul>
     </div>
     <div class="login">
