--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -51,7 +51,7 @@
 				<div class="nav-wrap-zp">
 					<ul>
 						<li class="navItem">
-							<a href="/mobile/index/research">
+							<a href="{:url('article/details','',false)}?id=27">
 								<span><img src="__STATIC__/img/home/yanjiusuo@2x.png"></span>
 								<span>寻根故事</span>
 							</a>
