--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -27,7 +27,7 @@
 				<li style="width: 12%;vertical-align: top;margin-top:0px">
 					<a href="#">首页</a>
 					<a href="/index/index/index">DNA寻祖</a>
-					<a href="/index/referral/referral">寻根故事</a>
+					<a href="{:url('article/details','',false)}?id=36">寻根故事</a>
 					<a href="{:url('article/details','',false)}?id=34">帮助中心</a>
 					<a href="/index/buy/buy">族内商城</a>
 					<a href="{:url('user/index')}">个人中心</a>
@@ -44,7 +44,7 @@
 				</li>
 				<li style="float: right;width: 12%;vertical-align: top;margin-top: 0px;">
 					<a href="#">族内</a>
-					<a href="/index/about/index">关于我们</a>
+					<a href="{:url('article/details','',false)}?id=37">关于我们</a>
 					<a href="#">加入我们</a>
 					<a target="_blank" href="{:url('article/details','',false)}?id=31">服务协议</a>
 					<a target="_blank" href="{:url('article/details','',false)}?id=35">顾问委员会</a>
