--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -15,7 +15,11 @@
         <div class="wrap_frame">
                 <!-- header -->
             <div class="lb_headWrap ">
+                {if condition="$info.type neq 6"}
                 <p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='{$return}'">
+                {else /}
+                <p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='{:url('goods/jifen_goodinfo','',false)}/id/{$info.id}'">
+                {/if}
                     <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
                 </p>
                    <span>确认订单</span>
@@ -54,9 +58,9 @@
                        </div>
                        <div class="item-price">
                             {if condition="$info.type neq 6"}
-                            <p class="price price2">￥{$info.price}</p>
+                            <p class="price price2">￥<span class="danjia">{$info.price}</span></p>
                             {else /}
-                            <p class="price price2">积分{$info.price}</p>
+                            <p class="price price2">积分<span class="danjia">{$info.price}</span></p>
                            {/if}
                            <p class="num">x1</p>
                        </div>
@@ -242,6 +246,22 @@
                 }
             });
         }
+
+        // $('.subtract').on('click',function(){
+        //     var num = $('#number').val();
+        //     var danjia = $('.danjia').html();
+
+        //     console.log( num )
+        //     console.log( num * danjia )
+        // })
+
+        // $('.add').on('click',function(){
+        //     var num = $('#number').val();
+        //     var danjia = $('.danjia').html();
+
+        //     console.log( num )
+        //     console.log( num * danjia )
+        // })
 
     </script>
 </body>
