--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -20,14 +20,14 @@
 			<div class="wrap_index">
 
 				<!-- 搜索 -->
-				<div class="search">
-					<p style="text-align: center;heigit:0.88rem;line-height: 0.88rem;color:#fff;font-size: 16px;">首页</p>
+				<!--<div class="search">-->
+					<p style="text-align: center;heigit:0.88rem;line-height: 0.88rem;color:#fff;font-size: 16px;background: #e3e3e3;">首页</p>
 					<!-- <form action="#">
 						<input class="search-input" type="text">
 						<button class="search-btn">搜索</button>
 						<span class="search-tip">搜索</span>
 					</form> -->
-				</div>
+				<!--</div>-->
 				<!-- 轮播图 -->
 				<div class="swiper-container banner-wrap-zp">
 					<div class="swiper-wrapper">
@@ -78,12 +78,20 @@
 				</div>
 
 				<!-- 基因查询 -->
+				<div class="chaxun">
 				<div class="gene-query">
 					<a href="/mobile/user/my_gene">
-						<img src="__STATIC__/img/home/anniu@2x.png">
+						<!--<img src="__STATIC__/img/home/anniu@2x.png">-->
+							<span>基因查询</span>
+							<img src="__STATIC__/img/home/anniu@2x.png"  style="width: .4rem;height: .4rem;display: inline-block;margin-left: .7rem;
+								
+								
+								
+								
+								"/>
 					</a>
 				</div>
-
+				</div>
 				{if condition="isset($recom_goods) && $recom_goods"}
 				<div class="recommend-wrap">
 					<div class="title">
@@ -115,7 +123,7 @@
 					<div class="nscramble-wrap">
 						<div class="title">
 							<h3>微解读</h3>
-							<a href="#"><span class="more">查看全部{$article_count}项</span></a>
+							<!--<a href="#"><span class="more">查看全部{$article_count}项</span></a>-->
 						</div>
 						{if condition="isset($article.recom) && $article.recom"}
 						<div class="nscramble-list">
