--- a/public/static/mobile/css/public/bottom_nav.css
+++ b/public/static/mobile/css/public/bottom_nav.css
@@ -18,7 +18,8 @@
 	box-sizing: border-box;
 	width: 100%;
 	height: .98rem;
-	background-color: #248de6;
+	background-color: #E3E3E3;
+	
 }
 
 /*导航 项*/
@@ -56,15 +57,15 @@
 	line-height: .2rem;
 	letter-spacing: .02rem;
 	text-align: center;
-	color: #c5e2fb;
+	
 }
 
 /*点击时 font-color*/
 .bNavYseFontColor {
-	color: #fff;
+	color: balck;
 }
 /*不-点击时 font-color*/
 .bNavNoFontColor {
-	color: #c5e2fb;
+	color: black;
 }
 
